--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,17 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- Meta tags for Open Graph -->
+    <meta property="og:title" content="Little Lemon" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.littlelemon.com/" />
+    <meta
+      property="og:image"
+      content="https://www.littlelemon.com/images/logo.jpg"
+    />
+    <meta property="og:description" content="Table Reservation Page" />
+    <meta property="og:site_name" content="Little Lemon" />
+    <meta property="og:locale" content="en_US" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -24,7 +35,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Little Lemon</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
